# feed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_range_adaptor.cpp
include/abu/: feed.h
include/abu/feed/: debug.h  forward_range_adaptor.h  stream.h  tags.h
tests/: CMakeLists.txt  test_adapted_range.cpp  test_stream.cpp
